# pytest-verify

./: .gitignore  README.md  README.rst  pyproject.toml
.github/workflows/: publish_pytest-verify.yml  publish_verify-diff-viewer.yml  run_tests.yml  test.yml 
pytest_verify/: plugin.py
tests/: test_verify_snapshot.py
tests/__snapshots__/: test_dataclass_user_snapshot.expected.json  test_dataframe_snapshot.actual.csv  test_dataframe_snapshot.expected.csv  test_diff_example.expected.json  test_json_api_response.expected.json  test_json_list_unordered.actual.json  test_numpy_array_snapshot.actual.json  test_pydantic_product_snapshot.expected.json  test_simple_text.expected.txt  test_xml_strict_order.expected.xml
tests/internal/: test_compare.py  test_compare_dataframe.py  test_compare_json.py  test_compare_ndarray.py  test_compare_xml.py  test_compare_yaml.py  test_core_utils.py  test_snapshot_paths.py
tests/public/: test_async.py  test_dataclass.py  test_json.py  test_numpy_array.py  test_pandas_dataframe.py  test_pydantic.py  test_text.py  test_utils.py  test_xml.py  test_yaml.py
tests/public/__snapshots__/: test_abs_tol_fields.actual.txt  test_abs_tol_fieldss.expected.json  test_async_ignore_field_snapshot.actual.json  test_async_ignore_field_snapshot.expected.json  test_async_nested_json_snapshot.actual.json  test_async_numeric_tolerance_snapshot.actual.json  test_async_returning_coroutine_snapshot.actual.json  test_async_simple_snapshot.expected.json  test_async_snapshot_demo.expected.json  (+21 more)
verify-diff-bin/: Cargo.toml  pyproject.toml
verify-diff-viewer/: Cargo.toml  pyproject.toml
